working on stabilisation